# itmo_algo_2sem_2023

./: CMakeLists.txt  README.md
lab10/: A.cpp  B.cpp  C.cpp  D.cpp
lab11/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
lab12/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
lab13/: C.cpp  E.cpp
lab14/: A.cpp  B.cpp  C.cpp
lab8/: B.cpp  C.cpp
lab9/: A.cpp  B.cpp  D.cpp  F.cpp
