cmake_minimum_required(VERSION 3.25)
project(itmo_algo_2sem_2023)

set(CMAKE_CXX_STANDARD 23)

add_executable(itmo_algo_2sem_2023 lab8/B.cpp lab8/C.cpp lab9/A.cpp lab9/B.cpp lab9/D.cpp lab9/F.cpp lab10/A.cpp lab10/B.cpp lab10/C.cpp lab10/D.cpp lab11/A.cpp lab11/B.cpp lab11/C.cpp lab11/D.cpp lab11/E.cpp lab12/A.cpp lab12/B.cpp lab12/D.cpp lab12/E.cpp lab12/F.cpp lab12/C.cpp lab13/C.cpp lab13/E.cpp)
